// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Windows should render for default values 1`] = `
<div>
  <div
    class="react-draggable react-resizable"
    style="transition: all 0s; transform: translate(0px, 28px)translate(600px,150px); width: 700px; height: 500px;"
  >
    <div
      class="css-exz6no"
    >
      <div
        class="handle css-1q7gku6"
      >
        <div
          class="css-bl229y"
        />
        <div
          class="css-6qqns1"
        />
        <div
          class="css-2fxb6m"
        />
        <div
          class="css-1bc9bee"
        />
      </div>
      <div
        class="css-1qx9vnh"
      >
        <div>
          Test
        </div>
      </div>
    </div>
    <span
      class="react-resizable-handle react-resizable-handle-se"
    />
  </div>
</div>
`;

exports[`Windows should render with top bar component values 1`] = `
<div>
  <div
    class="react-draggable react-resizable"
    style="transition: all 0s; transform: translate(0px, 28px)translate(600px,150px); width: 700px; height: 500px;"
  >
    <div
      class="css-exz6no"
    >
      <div
        class="handle css-1q7gku6"
      >
        <div
          class="css-bl229y"
        />
        <div
          class="css-6qqns1"
        />
        <div
          class="css-2fxb6m"
        />
        <div
          class="css-1bc9bee"
        >
          <div>
            Top bar
          </div>
        </div>
      </div>
      <div
        class="css-1qx9vnh"
      >
        <div>
          Test
        </div>
      </div>
    </div>
    <span
      class="react-resizable-handle react-resizable-handle-se"
    />
  </div>
</div>
`;
